Added subscription purchase and ads

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -12,6 +12,7 @@
     "bysigninginyou": "Mit der Anmeldung akzeptieren Sie unsere Nutzungsbedingungen und Datenschztzrichtlinie.",
     "klemen": "Mit Pongo klingt das Leben besser",
     "or": "oder",
+    "pleaseleavethepageafterasuccessfullpurchase": "Bitte verlassen Sie die Seite nach einem erfolgreichen Kauf",
     "profile": "Profil",
     "name": "Name",
     "email": "E-Mail",
