--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -30,6 +30,11 @@
         "description": "OK"
     },
 
+    "pleaseleavethepageafterasuccessfullpurchase": "Please leave the page after a successfull purchase",
+    "@pleaseleavethepageafterasuccessfullpurchase": {
+        "description": "pleaseleavethepageafterasuccessfullpurchase"
+    },
+
     "areyousure": "Are you sure?",
     "@areyousure": {
         "description": "Are You Sure?"
