--- a/lib/l10n/app_hr.arb
+++ b/lib/l10n/app_hr.arb
@@ -50,6 +50,7 @@
     "addtoplaylist": "Dodaj u Playlista",
     "premiumisneededtodownloadatrack": "Za preuzimanje pjesme potreban je premium",
     "premiumisneededtosavethequeue": "Za spremanje reda čekanja potreban je premium",
+    "pleaseleavethepageafterasuccessfullpurchase": "Molimo napustite stranicu nakon uspješne kupnje",
     "like": "Sviđa mi se",
     "unlike": "Ne sviđa mi se",    
     "playlistalreadycontainsthistrack": "Playlista već sadrži ovu pjesmu",
