Fixed an issue with the image and with search

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -16,6 +16,9 @@
     "profile": "Profil",
     "name": "Name",
     "email": "E-Mail",
+    "userinterface": "Benutzeroberfläche",
+    "useblur": "Unschärfe verwenden",
+    "turnoffifyourdeviceisgettinghotorhaslag": "Deaktiviere es, wenn dein Gerät heiß wird oder Verzögerungen hat",
     "premium": "Premium",
     "subscribed": "Abonniert",
     "signout": "Abmelden",
