--- a/lib/l10n/app_hr.arb
+++ b/lib/l10n/app_hr.arb
@@ -21,6 +21,9 @@
     "addtrackstoyoutplaylist": "Dodajte pjesme u vašu playlistu!",
     "createnewplaylistnow": "Stvori novu playlistu sada!",
     "signout": "Odjavi se",
+    "userinterface": "Korisničko sučelje",
+    "useblur": "Koristi zamućenje",
+    "turnoffifyourdeviceisgettinghotorhaslag": "Isključi ako se tvoj uređaj pregrijava ili ima zastajkivanja",
     "settings": "Postavke",
     "yourprofile": "Vaš profil",
     "library": "Knjižnica",
