Fixed an issue with auto sign out

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -40,9 +40,9 @@
         "description": "Use blur"
     },
 
-    "turnoffifyourdeviceisgettinghotorhaslag": "OK",
+    "turnoffifyourdeviceisgettinghotorhaslag": "Turn off if your device is getting hot or has lag",
     "@turnoffifyourdeviceisgettinghotorhaslag": {
-        "description": "OK"
+        "description": "Turn off if your device is getting hot or has lag"
     },
 
     "pleaseleavethepageafterasuccessfullpurchase": "Please leave the page after a successfull purchase",
