--- a/lib/l10n/app_hr.arb
+++ b/lib/l10n/app_hr.arb
@@ -28,6 +28,7 @@
     "yourprofile": "Vaš profil",
     "library": "Knjižnica",
     "online": "Online",
+    "shazamfailed": "Shazam nije uspio prepoznati pjesmu",
     "findyourfavouritesongsnow": "Pronađite svoje omiljene pjesme sada!",
     "offline": "Offline",
     "startpage": "Početna stranica",
