--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -39,6 +39,8 @@
     "addtrackstoyoutplaylist": "Fügen Sie Titel zu Ihrer Playlist hinzu!",
     "findyourfavouritesongsnow": "Finde jetzt deine Lieblingslieder!",
     "offline": "Offline",
+    "sleep": "Schlafen",
+    "sleepandalarmclock": "Schlafen & Wecker",
     "playlist": "Playlist",
     "hidden": "Verborgen",
     "shazamfailed": "Shazam konnte das Lied nicht erkennen",
