--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -39,7 +39,7 @@
     "addtrackstoyoutplaylist": "Fügen Sie Titel zu Ihrer Playlist hinzu!",
     "findyourfavouritesongsnow": "Finde jetzt deine Lieblingslieder!",
     "offline": "Offline",
-    "sleep": "Schlafen",
+    "sleep": "Schlafen Wecker",
     "sleepandalarmclock": "Schlafen & Wecker",
     "playlist": "Playlist",
     "hidden": "Verborgen",
