--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -15,7 +15,7 @@
         "description": "Cancel"
     },
 
-    "sleep": "Sleep",
+    "sleep": "Sleep alarm",
     "@sleep": {
         "description": "Sleep"
     },
