--- a/lib/l10n/app_hr.arb
+++ b/lib/l10n/app_hr.arb
@@ -28,7 +28,7 @@
     "yourprofile": "Vaš profil",
     "library": "Knjižnica",
     "online": "Online",
-    "sleep": "San",
+    "sleep": "San alarm",
     "sleepandalarmclock": "San & budilica",
     "shazamfailed": "Shazam nije uspio prepoznati pjesmu",
     "findyourfavouritesongsnow": "Pronađite svoje omiljene pjesme sada!",
