Fixed and finished sleep alarm mode. Just need to create a way to view and change it but overall finished

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -41,6 +41,25 @@
     "offline": "Offline",
     "sleep": "Schlafen Wecker",
     "sleepandalarmclock": "Schlafen & Wecker",
+    "donotterminatetheapp": "Beenden Sie die App NICHT",
+    "cannotstartalarm": "Der Alarm kann nicht gestartet werden",
+    "thequeuemustnotbeemptyinordertostartthealarm": "Die Warteschlange darf nicht leer sein, um den Alarm zu starten",
+    "maximumvolumeofthealarm": "Maximale Lautstärke des Alarms",
+    "createnewsleepalarm": "Neuen Schlafalarm erstellen",
+    "off": "Aus",
+    "sleepin": "Einschlafmodus",
+    "alarm": "Alarm",
+    "cannotcreateasleepalarmwithoutthe": "Ein Schlafalarm kann nicht ohne 'Einschlafmodus' oder 'Alarm' erstellt werden",
+    "pongowillgraduallylowerthevolumefor": "Pongo wird die Lautstärke allmählich senken für",
+    "pongowillgraduallyincreasethevolume": "Pongo wird die Lautstärke allmählich erhöhen",
+    "beforeyouneedtowakeupat": "bevor Sie um aufwachen müssen",
+    "about": "Über",
+    "aboutpongo": "Über Pongo",
+    "contactusviamail": "Kontaktieren Sie uns per E-Mail",
+    "termsandconditions": "Allgemeine Geschäftsbedingungen",
+    "ourtermsandconditions": "Unsere Allgemeinen Geschäftsbedingungen",
+    "privacypolicy": "Datenschutzrichtlinie",
+    "ourprivacypolicy": "Unsere Datenschutzrichtlinie",
     "playlist": "Playlist",
     "hidden": "Verborgen",
     "shazamfailed": "Shazam konnte das Lied nicht erkennen",
