--- a/lib/l10n/app_hr.arb
+++ b/lib/l10n/app_hr.arb
@@ -34,6 +34,25 @@
     "findyourfavouritesongsnow": "Pronađite svoje omiljene pjesme sada!",
     "offline": "Offline",
     "startpage": "Početna stranica",
+    "donotterminatetheapp": "NE zatvarajte aplikaciju",
+    "cannotstartalarm": "Ne može se pokrenuti alarm",
+    "thequeuemustnotbeemptyinordertostartthealarm": "Redoslijed ne smije biti prazan kako bi se pokrenuo alarm",
+    "maximumvolumeofthealarm": "Maksimalna glasnoća alarma",
+    "createnewsleepalarm": "Stvori novi alarm za spavanje",
+    "off": "Isključeno",
+    "sleepin": "Uspavljivanje",
+    "alarm": "Alarm",
+    "cannotcreateasleepalarmwithoutthe": "Ne možete stvoriti alarm za spavanje bez 'uspavljivanja' ili 'alarma'",
+    "pongowillgraduallylowerthevolumefor": "Pongo će postupno smanjivati glasnoću tijekom",
+    "pongowillgraduallyincreasethevolume": "Pongo će postupno povećavati glasnoću",
+    "beforeyouneedtowakeupat": "prije nego što se morate probuditi u",
+    "about": "O nama",
+    "aboutpongo": "O Pongu",
+    "contactusviamail": "Kontaktirajte nas putem e-maila",
+    "termsandconditions": "Uvjeti i odredbe",
+    "ourtermsandconditions": "Naši uvjeti i odredbe",
+    "privacypolicy": "Pravila privatnosti",
+    "ourprivacypolicy": "Naša pravila privatnosti",
     "showhistory": "Prikaži povijest",
     "showhistoryonstartpage": "Prikaži povijest na početnoj stranici",
     "showexplore": "Prikaži istraživanje",
