Fixed alarm part of sleep alarm

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -49,6 +49,7 @@
     "off": "Aus",
     "sleepin": "Einschlafmodus",
     "alarm": "Alarm",
+    "sleepalarmisenabled": "Schlafalarm ist eingeschaltet",
     "cannotcreateasleepalarmwithoutthe": "Ein Schlafalarm kann nicht ohne 'Einschlafmodus' oder 'Alarm' erstellt werden",
     "pongowillgraduallylowerthevolumefor": "Pongo wird die Lautstärke allmählich senken für",
     "pongowillgraduallyincreasethevolume": "Pongo wird die Lautstärke allmählich erhöhen",
@@ -60,6 +61,8 @@
     "ourtermsandconditions": "Unsere Allgemeinen Geschäftsbedingungen",
     "privacypolicy": "Datenschutzrichtlinie",
     "ourprivacypolicy": "Unsere Datenschutzrichtlinie",
+    "unabletohaltthemusicplayer": "Der Musikplayer kann nicht gestoppt werden",
+    "unabletohaltthemusicplayerbecausesleepalarmiscurrentlyon": "Der Musikplayer kann nicht gestoppt werden, da der Schlafalarm derzeit aktiviert ist",
     "playlist": "Playlist",
     "hidden": "Verborgen",
     "shazamfailed": "Shazam konnte das Lied nicht erkennen",
