--- a/lib/l10n/app_hr.arb
+++ b/lib/l10n/app_hr.arb
@@ -29,6 +29,7 @@
     "library": "Knjižnica",
     "online": "Online",
     "sleep": "San alarm",
+    "sleepalarmisenabled": "San alarm je uključen",
     "sleepandalarmclock": "San & budilica",
     "shazamfailed": "Shazam nije uspio prepoznati pjesmu",
     "findyourfavouritesongsnow": "Pronađite svoje omiljene pjesme sada!",
@@ -40,6 +41,8 @@
     "maximumvolumeofthealarm": "Maksimalna glasnoća alarma",
     "createnewsleepalarm": "Stvori novi alarm za spavanje",
     "off": "Isključeno",
+    "unabletohaltthemusicplayer": "Ne može se zaustaviti music player",
+    "unabletohaltthemusicplayerbecausesleepalarmiscurrentlyon": "Ne može se zaustaviti music player jer je alarm za spavanje trenutno uključen",
     "sleepin": "Uspavljivanje",
     "alarm": "Alarm",
     "cannotcreateasleepalarmwithoutthe": "Ne možete stvoriti alarm za spavanje bez 'uspavljivanja' ili 'alarma'",
