--- a/lib/l10n/app_hr.arb
+++ b/lib/l10n/app_hr.arb
@@ -28,6 +28,8 @@
     "yourprofile": "Vaš profil",
     "library": "Knjižnica",
     "online": "Online",
+    "accountdisabled": "Račun deaktiviran",
+    "pleasecontactinordertoenableyouraccountandusetheapp": "Molimo kontaktirajte pongo.group@gmail.com kako biste aktivirali svoj račun i koristili aplikaciju",
     "sleep": "San alarm",
     "sleepalarmisenabled": "San alarm je uključen",
     "sleepandalarmclock": "San & budilica",
