Started adding macos

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -72,7 +72,7 @@
     "favouritesongs": "Lieblingslieder",
     "onlinefavouritesongs": "Lieblingslieder online",
     "playlists": "Playlisten",
-    "onlineplaylists": "Playlisten online",
+    "onlineplaylists": "Online Playlisten",
     "songs": "Lieder",
     "offlinesongs": "Offline Lieder",
     "offlineplaylists": "Offline Playlisten",
