--- a/lib/l10n/app_hr.arb
+++ b/lib/l10n/app_hr.arb
@@ -68,11 +68,10 @@
     "onlinefavouritesongs": "Omiljene pjesme online",
     "playlists": "Playliste",
     "onlineplaylists": "Online playliste",
-    "onlineplaylists": "Online playlista",
     "songs": "Pjesme",
-    "offlinesongs": "Pjesme dostupne offline",
-    "offlineplaylists": "Playliste dostupne offline",
-    "offlineplaylists": "Playlista dostupna offline",
+    "offlinesongs": "Offline pjesme",
+    "offlineplaylists": "Offline playliste",
+    "offlineplaylist": "Offline playlista",
     "newplaylist": "Nova Playlista",
     "cancel": "Odustani",
     "create": "Stvori",
@@ -200,7 +199,7 @@
     "successfullysavedsynctimedelay": "Sinkronizacija vremenskog kašnjenja za tekst ove pjesme uspješno spremljena",
     "playlistnamealreadyexists": "Istoimena playlista već postoji",
     "pleaseallowaccesstophotogalery": "Molimo omogućite Pongu pristup fotografijama",
-    "onlineplaylist": "Online playlisa",
+    "onlineplaylist": "Online playlista",
     "cropimage": "Izreži sliku",
     "plustracks": "pjesama",
     "changename": "Promjeni ime",
