Macos added lyrics, title bar, queue and searchability of artists, albums and playlists

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -24,6 +24,7 @@
     "signout": "Abmelden",
     "settings": "Einstellungen",
     "yourprofile": "Ihr Profil",
+    "queue": "Warteschlange",
     "library": "Bibliothek",
     "buypremium": "Kauf Pongo Premium",
     "premiumisneededtodownloadatrack": "Premium wird benötigt, um einen Titel herunterzuladen",
