--- a/lib/l10n/app_hr.arb
+++ b/lib/l10n/app_hr.arb
@@ -26,6 +26,7 @@
     "turnoffifyourdeviceisgettinghotorhaslag": "Isključi ako se tvoj uređaj pregrijava ili ima zastajkivanja",
     "settings": "Postavke",
     "yourprofile": "Vaš profil",
+    "queue": "Red čekanja",
     "library": "Knjižnica",
     "online": "Online",
     "accountdisabled": "Račun deaktiviran",
