macos - added tooltips and refined lyrics

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -132,6 +132,7 @@
     "doublecliktoadjustvolume": "Doppelklick, um die Lautstärke anzupassen",
     "newalbums": "Neue Alben",
     "lyrics": "Liedtexte",
+    "repeat": "Wiederholung",
     "trackdownloaded": "Titel heruntergeladen",
     "createnewplaylist": "Neue Playlist erstellen",
     "alreadyinplaylist": "Bereits in der Playlist",
@@ -141,6 +142,8 @@
     "clearallhistory": "Alle Verlauf löschen",
     "clearallhistorybody": "Sind Sie sicher, dass Sie den gesamten Suchverlauf löschen möchten?",
     "topten": "Top 10",
+    "fullscreen": "Vollbild",
+    "exitfullscreen": "Vollbild beenden",
     "singlesandcompilations": "Singles und Kompilationen",
     "relatedartists": "Ähnliche Künstler",
     "data": "Daten",
@@ -170,6 +173,7 @@
     "lasttoqueue": "Letzte in der Warteschlange",
     "warning": "Warnung",
     "shufflemodeison": "Der Zufallsmodus ist aktiviert!",
+    "shuffle": "Zufallsmodus",
     "leftalignment": "Linksbündig ausrichtung",
     "centeralignment": "Zentriert ausrichtung",
     "rightalignment": "Rechtsbündig ausrichtung",
