--- a/lib/l10n/app_hr.arb
+++ b/lib/l10n/app_hr.arb
@@ -29,6 +29,9 @@
     "queue": "Red čekanja",
     "library": "Knjižnica",
     "online": "Online",
+    "repeat": "Ponavljanje",
+    "fullscreen": "Puni zaslon",
+    "exitfullscreen": "Izađi iz punog zaslona",
     "accountdisabled": "Račun deaktiviran",
     "pleasecontactinordertoenableyouraccountandusetheapp": "Molimo kontaktirajte pongo.group@gmail.com kako biste aktivirali svoj račun i koristili aplikaciju",
     "sleep": "San alarm",
@@ -173,6 +176,7 @@
     "lasttoqueue": "Zadnji u red čekanja",
     "warning": "Upozorenje",
     "shufflemodeison": "Načini nasumične reprodukcije je uključen!",
+    "shuffle": "Nasumična reprodukcija",
     "leftalignment": "Lijevo poravnanje",
     "centeralignment": "Srednje poravnanje",
     "rightalignment": "Desno poravnanje",
