phone - light mode

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -12,6 +12,15 @@
     "bysigninginyou": "Mit der Anmeldung akzeptieren Sie unsere Nutzungsbedingungen und Datenschztzrichtlinie.",
     "klemen": "Mit Pongo klingt das Leben besser",
     "or": "oder",
+    "appmayneedtoberestartedinorderforchangestotakefullaffect": "Die App muss möglicherweise neu gestartet werden, damit die Änderungen vollständig wirksam werden.",
+    "mix": "Mix",
+    "usemixfeaturewhenplayingsearchedmusic": "Verwenden Sie die Mix-Funktion, wenn Sie gesuchte Musik abspielen.",
+    "darkmode": "Dunkelmodus",
+    "lightmode": "Hellen Modus",
+    "currentlyusingdarkmode": "Derzeit wird der Dunkelmodus verwendet.",
+    "currentlyusinglightmode": "Derzeit wird der Hellen Modus verwendet.",
+    "detailedblurhash": "Detaillierter BlurHash",
+    "usedetailedblurhash": "Verwenden Sie detaillierten BlurHash",
     "pleaseleavethepageafterasuccessfullpurchase": "Bitte verlassen Sie die Seite nach einem erfolgreichen Kauf",
     "profile": "Profil",
     "name": "Name",
@@ -56,7 +65,7 @@
     "cannotcreateasleepalarmwithoutthe": "Ein Schlafalarm kann nicht ohne 'Einschlafmodus' oder 'Alarm' erstellt werden",
     "pongowillgraduallylowerthevolumefor": "Pongo wird die Lautstärke allmählich senken für",
     "pongowillgraduallyincreasethevolume": "Pongo wird die Lautstärke allmählich erhöhen",
-    "beforeyouneedtowakeupat": "bevor Sie um aufwachen müssen",
+    "beforeyouneedtowakeupat": "bevor Sie aufwachen müssen um",
     "about": "Über",
     "aboutpongo": "Über Pongo",
     "contactusviamail": "Kontaktieren Sie uns per E-Mail",
