--- a/lib/l10n/app_hr.arb
+++ b/lib/l10n/app_hr.arb
@@ -12,6 +12,15 @@
     "bysigninginyou": "Prijavljivanjem prihvačate naše uvijete korištenja i politike privatnosti.",
     "klemen": "Uz Pongo život zvuči bolje",
     "or": "ili",
+    "appmayneedtoberestartedinorderforchangestotakefullaffect": "Aplikacija će možda trebati biti ponovno pokrenuta kako bi promjene potpuno stupile na snagu.",
+    "mix": "Mix",
+    "usemixfeaturewhenplayingsearchedmusic": "Koristite značajku mix kada reproducirate pretraženu glazbu.",
+    "darkmode": "Tamni način",
+    "lightmode": "Svjetli način",
+    "currentlyusingdarkmode": "Trenutno koristite tamni način.",
+    "currentlyusinglightmode": "Trenutno koristite svjetli način.",
+    "detailedblurhash": "Detaljan BlurHash",
+    "usedetailedblurhash": "Koristite detaljan BlurHash",
     "profile": "Profil",
     "name": "Ime",
     "email": "Email",
