Added logarithmic and exponential sleepin and wakeup options as well as dynamic blurhash

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -24,6 +24,9 @@
     "pleaseleavethepageafterasuccessfullpurchase": "Bitte verlassen Sie die Seite nach einem erfolgreichen Kauf",
     "profile": "Profil",
     "name": "Name",
+    "dynamicblurhash": "Dynamischer Blurhash",
+    "playingdetailsbackgroundwilldynamicallychange": "Der Hintergrund der Wiedergabedetails wird sich dynamisch ändern",
+    "dynamicblurhashwarning": "Dynamischer Blurhash ist SEHR ANSPRUCHSVOLL FÜR DEIN GERÄT. Es ist EXPERIMENTELL, wird DEN AKKU SCHNELL LEEREN und das Gerät ERHITZEN",
     "linearsleepin": "Lineares Einschlafen",
     "linearlydecreasevolumewhenusingsleepin": "Lautstärke beim Einschlafen linear verringern",
     "linearalarm": "Linearer Wecker",
