--- a/lib/l10n/app_hr.arb
+++ b/lib/l10n/app_hr.arb
@@ -24,6 +24,9 @@
     "profile": "Profil",
     "name": "Ime",
     "email": "Email",
+    "dynamicblurhash": "Dinamički blurhash",
+    "playingdetailsbackgroundwilldynamicallychange": "Pozadina detalja reprodukcije će se dinamički mijenjati",
+    "dynamicblurhashwarning": "Dinamički blurhash JE VRLO ZAHTJEVAN ZA TVOJ UREĐAJ. Eksperimentalan je, BRZO ĆE ISPUSTATI BATERIJU i zagrijati uređaj",
     "premium": "Premium",
     "buypremium": "Kupi Pongo premium",
     "linearsleepin": "Linearno uspavljivanje",
