phone details - new image position, saving offset after killing the details and automatically hide lyrics when do not exist

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -104,6 +104,7 @@
     "plain": "Plain",
     "sync": "Sync",
     "nosynclyrics": "Keine synchronisierten Texte",
+    "nolyricsavailable": "Keine Texte sind verfügbar",
     "noplainlyrics": "Keine einfachen Texte",
     "wanttohelpoutlyrics": "Helfen Sie mit? Fügen Sie Texte auf lrclib.net hinzu!",
     "artist": "Künstler",
