phone - added liquid glass for users

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -27,6 +27,9 @@
     "dynamicblurhash": "Dynamischer Blurhash",
     "playingdetailsbackgroundwilldynamicallychange": "Der Hintergrund der Wiedergabedetails wird sich dynamisch ändern",
     "dynamicblurhashwarning": "Dynamischer Blurhash ist SEHR ANSPRUCHSVOLL FÜR DEIN GERÄT. Es ist EXPERIMENTELL, wird DEN AKKU SCHNELL LEEREN und das Gerät ERHITZEN",
+    "liquidglass": "Liquid glass",
+    "useliquidglass": "Liquid glass verwenden",
+    "dynamicblurhashwarning": "Liquid glass ist SEHR ANSPRUCHSVOLL FÜR DEIN GERÄT. Es ist EXPERIMENTELL, wird DEN AKKU SCHNELL LEEREN und das Gerät ERHITZEN",
     "linearsleepin": "Lineares Einschlafen",
     "linearlydecreasevolumewhenusingsleepin": "Lautstärke beim Einschlafen linear verringern",
     "linearalarm": "Linearer Wecker",
