--- a/lib/l10n/app_hr.arb
+++ b/lib/l10n/app_hr.arb
@@ -27,6 +27,9 @@
     "dynamicblurhash": "Dinamički blurhash",
     "playingdetailsbackgroundwilldynamicallychange": "Pozadina detalja reprodukcije će se dinamički mijenjati",
     "dynamicblurhashwarning": "Dinamički blurhash JE VRLO ZAHTJEVAN ZA TVOJ UREĐAJ. Eksperimentalan je, BRZO ĆE ISPUSTATI BATERIJU i zagrijati uređaj",
+    "liquidglass": "Liquid glass",
+    "useliquidglass": "Koristite liquid glass",    
+    "liquidglasswarning": "Liquid glass JE VRLO ZAHTJEVAN ZA TVOJ UREĐAJ. Eksperimentalan je, BRZO ĆE ISPUSTATI BATERIJU i zagrijati uređaj",
     "premium": "Premium",
     "buypremium": "Kupi Pongo premium",
     "linearsleepin": "Linearno uspavljivanje",
